fixed the arrow to flip when sidebar is collapsed

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -22,6 +22,10 @@
       .logo {
         width: 1.4375rem;
       }
+
+      .collapseMenuItem img {
+        transform: scaleX(-1);
+      }
     }
   }
 }
